# TrainGrid

./: .dockerignore  .gitignore  AGENTS.md  README.md  check.ps1  check.sh  dataset.csv  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: main.py
api/core/: security.py
api/dependencies/: auth.py  database.py
api/routers/: experiments.py  runs.py  (+1 more)
backend/: Dockerfile  README.MD  pyproject.toml
backend/api/: main.py
backend/api/core/: config.py  exceptions.py  logging.py
backend/api/routers/: deployments.py  projects.py  runs.py
backend/api/schemas/: experiment.py  model.py  project.py  run.py
backend/api/services/: deployment_service.py  model_service.py  run_service.py
backend/domain/entities/: project.py  run.py
backend/domain/repositories/: experiment_repository.py  model_repository.py  project_repository.py  run_repository.py
backend/infrastructure/database/: models.py  session.py
backend/infrastructure/queue/: broker.py
backend/infrastructure/storage/: artifact_store.py  local_store.py  s3_store.py
backend/shared/: enums.py  errors.py  types.py
backend/trainers/: base.py  registry.py
backend/trainers/configs/: base.py  classification.py  regression.py
backend/trainers/pytorch/: trainer.py
backend/trainers/sklearn/: config.py  trainer.py
backend/trainers/xgboost/: trainer.py
backend/workers/: celery_app.py
backend/workers/tasks/: training_tasks.py
docs/: api-reference.md  architecture.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
shared/: constants.py  errors.py
(+89 files in other folders)
