[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend service with Celery, Redis, and ML components"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "celery",
    "redis",
    "pydantic-settings",
    "sqlalchemy",
    "alembic",
    "httpx",
    "scikit-learn",
    "pandas",
]

[tool.setuptools]
packages = []

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pandas-stubs",
]

# 1. Global configurations MUST come before any specific [[tool.mypy.overrides]] arrays
[tool.mypy]
ignore_missing_imports = true

# 2. Specific module overrides (Optional fallbacks)
[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "joblib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true
